sgd/reproduction/playground/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>SMAX PS Service Case</fullName>
        <description>問い合わせ</description>
        <isActive>true</isActive>
        <values>
            <fullName>キャンセル</fullName>
        </values>
        <values>
            <fullName>作業中</fullName>
        </values>
        <values>
            <fullName>完了</fullName>
        </values>
        <values>
            <fullName>対応中</fullName>
        </values>
        <values>
            <fullName>対応依頼</fullName>
        </values>
        <values>
            <fullName>新規</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>返信待ち</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SMAX PS Service Opportunities</fullName>
        <description>引合管理</description>
        <isActive>true</isActive>
        <values>
            <fullName>ドラフト</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>受注</fullName>
        </values>
        <values>
            <fullName>商談中</fullName>
        </values>
        <values>
            <fullName>失注</fullName>
        </values>
        <values>
            <fullName>完了</fullName>
        </values>
        <values>
            <fullName>提出済み</fullName>
        </values>
        <values>
            <fullName>未提出</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Category2__c</fullName>
        <label>お問合せカテゴリ（電話）</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>製品説明</fullName>
                </value>
                <value>
                    <fullName>使用方法</fullName>
                </value>
                <value>
                    <fullName>仕様確認</fullName>
                </value>
                <value>
                    <fullName>引合案件</fullName>
                </value>
                <value>
                    <fullName>価格・納期問合せ</fullName>
                </value>
                <value>
                    <fullName>サービス関連</fullName>
                </value>
                <value>
                    <fullName>トラブル案件</fullName>
                </value>
                <value>
                    <fullName>商流確認</fullName>
                </value>
                <value>
                    <fullName>資料要求</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>お問合せカテゴリ（Web）</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>資料請求</fullName>
                </value>
                <value>
                    <fullName>見積依頼</fullName>
                </value>
                <value>
                    <fullName>詳細説明</fullName>
                </value>
                <value>
                    <fullName>購入検討</fullName>
                </value>
                <value>
                    <fullName>サンプル測定</fullName>
                </value>
                <value>
                    <fullName>製品修理</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>お問合せ詳細</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeadID__c</fullName>
        <label>顧客ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <label>製品カテゴリ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SEC-400</fullName>
                </value>
                <value>
                    <fullName>SEC-E</fullName>
                </value>
                <value>
                    <fullName>SEC-N100</fullName>
                </value>
                <value>
                    <fullName>SEC-Z300</fullName>
                </value>
                <value>
                    <fullName>SEC-Z500X</fullName>
                </value>
                <value>
                    <fullName>SEC-Z700X</fullName>
                </value>
                <value>
                    <fullName>SEC-8000</fullName>
                </value>
                <value>
                    <fullName>MFC　その他</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>DU</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>アクセサリ　その他</fullName>
                </value>
                <value>
                    <fullName>LF-F</fullName>
                </value>
                <value>
                    <fullName>LV-F</fullName>
                </value>
                <value>
                    <fullName>液体気化製品　その他</fullName>
                </value>
                <value>
                    <fullName>CU</fullName>
                </value>
                <value>
                    <fullName>UR-Z700</fullName>
                </value>
                <value>
                    <fullName>GR-300</fullName>
                </value>
                <value>
                    <fullName>VG</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>OPGU</fullName>
                </value>
                <value>
                    <fullName>SF/VP</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>RGA</fullName>
                </value>
                <value>
                    <fullName>LD/LW</fullName>
                </value>
                <value>
                    <fullName>LM/LM-W</fullName>
                </value>
                <value>
                    <fullName>VL/VL-S</fullName>
                </value>
                <value>
                    <fullName>PV</fullName>
                </value>
                <value>
                    <fullName>PCU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelationCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>関連ケース</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ケース</relationshipLabel>
        <relationshipName>RelationCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CallBackRequestDate__c</fullName>
        <label>コールバック希望日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CaseCategory__c</fullName>
        <label>依頼内容カテゴリ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QuestionUsage</fullName>
                    <label>使用方法の問い合わせ</label>
                </value>
                <value>
                    <fullName>Trouble</fullName>
                    <label>トラブル連絡</label>
                </value>
                <value>
                    <fullName>RequestFieldRepair</fullName>
                    <label>訪問修理</label>
                </value>
                <value>
                    <fullName>RequestDepotRepair</fullName>
                    <label>社内修理</label>
                </value>
                <value>
                    <fullName>RequestInstallation</fullName>
                    <label>据付/設置工事</label>
                </value>
                <value>
                    <fullName>ApplicationInquiry</fullName>
                    <label>アプリケーション問い合わせ</label>
                </value>
                <value>
                    <fullName>PartsInquiry</fullName>
                    <label>部品問い合わせ</label>
                </value>
                <value>
                    <fullName>RequestInspection</fullName>
                    <label>点検</label>
                </value>
                <value>
                    <fullName>RequestAnly</fullName>
                    <label>分析</label>
                </value>
                <value>
                    <fullName>ProductInquiry</fullName>
                    <label>製品購入問い合わせ</label>
                </value>
                <value>
                    <fullName>Recall</fullName>
                    <label>遡り作業</label>
                </value>
                <value>
                    <fullName>RequestAOP</fullName>
                    <label>AOP</label>
                </value>
                <value>
                    <fullName>RequestMaintenance</fullName>
                    <label>保守</label>
                </value>
                <value>
                    <fullName>RequestInitialRun</fullName>
                    <label>試運転</label>
                </value>
                <value>
                    <fullName>RequestVersionUp</fullName>
                    <label>改造/バージョンアップ</label>
                </value>
                <value>
                    <fullName>RequestRelocate</fullName>
                    <label>撤去/移設</label>
                </value>
                <value>
                    <fullName>CalibrationDepotCert</fullName>
                    <label>校正/認証(社内)</label>
                </value>
                <value>
                    <fullName>CalibrationFieldCert</fullName>
                    <label>校正/認証(フィールド)</label>
                </value>
                <value>
                    <fullName>Testing</fullName>
                    <label>テスティング</label>
                </value>
                <value>
                    <fullName>Replace</fullName>
                    <label>リプレース</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>その他</label>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                    <isActive>false</isActive>
                    <label>見積依頼</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_CaseSourceCategory__c</fullName>
        <label>発信元区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EndUser</fullName>
                    <label>エンドユーザ</label>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                    <label>販社</label>
                </value>
                <value>
                    <fullName>FieldEngineer</fullName>
                    <label>エンジニア</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                    <label>業務</label>
                </value>
                <value>
                    <fullName>HOR</fullName>
                </value>
                <value>
                    <fullName>HAT</fullName>
                </value>
                <value>
                    <fullName>STEC</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>その他</label>
                </value>
                <value>
                    <fullName>SO</fullName>
                    <isActive>false</isActive>
                    <label>SO</label>
                </value>
                <value>
                    <fullName>SS</fullName>
                    <isActive>false</isActive>
                    <label>SS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Case_Type_Image__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;SMAX_PS_ServiceCase&apos;, IMAGE(&quot;/resource/SMAX_PS_ServiceCase&quot;,&quot;&quot;,30,30)+&quot;     問合せ &quot;,IMAGE(&quot;/resource/SMAX_PS_ServiceOpp&quot;,&quot;&quot;,30,30)+&quot;   引合&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ケース種別</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ComplaintJudge__c</fullName>
        <label>苦情判断</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_ComplaintJudge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ComplaintReason__c</fullName>
        <label>苦情原因</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_ComplaintJudge__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SVMXC_ComplaintReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ErrorCode__c</fullName>
        <label>エラーコード</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EstimatedAmount__c</fullName>
        <label>受注予定金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_FirstName__c</fullName>
        <label>名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_FollowupDate__c</fullName>
        <label>フォローアップ予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IS_Sheet__c</fullName>
        <description>IS Sheetを発行する画面にアクセスする。</description>
        <formula>HYPERLINK(
&quot;http://g-biz01.horiba.biz/Sales/Uhw/C9001.aspx?CaseId=&quot;&amp;Id
,&quot;ISシート発行&quot;)</formula>
        <label>ISシート発行</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastName__c</fullName>
        <label>姓</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LostReasonTxt__c</fullName>
        <label>失注理由詳細</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LostReason__c</fullName>
        <label>失注理由</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                    <label>予算</label>
                </value>
                <value>
                    <fullName>DeliveryTimeline</fullName>
                    <label>納期</label>
                </value>
                <value>
                    <fullName>NotThisTime</fullName>
                    <label>見送り</label>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                    <label>他決</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Mail_FreeText__c</fullName>
        <description>自由記述用のメールを作成する</description>
        <formula>HYPERLINK(
&quot;mailto:&quot;&amp; &quot;&quot;
&amp;
&quot;?subject=&quot; &amp; &quot;【Case#&quot;&amp;CaseNumber&amp;&quot;】&quot;
&amp;
&quot;&amp;cc=&quot; &amp; $User.My_mail_to_Salesforce__c
&amp;
&quot;&amp;body=&quot;&amp;&quot;%0D%0A%0D%0A&quot;
&amp;
&quot;※お問い合わせの際は以下の番号をお伝えください。%0D%0A&quot;
&amp;
&quot;Case No.&quot;&amp;CaseNumber&amp;&quot;%0D%0A&quot;
&amp;
&quot;※CCに社内システム連携のためのアドレスが含まれておりますので、ご返信の際は「全員に返信」くださいますようお願いいたします。%0D%0A&quot;
&amp;
&quot; ref:&quot;&amp; Id
,&quot;自由記述&quot;)</formula>
        <label>自由記述</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Mail_to_Distributor__c</fullName>
        <description>販社/代理店宛へのメールを作成する。</description>
        <formula>HYPERLINK(
&quot;mailto:&quot;&amp; SMAX_PS_SoldTo_Contact__r.Email
&amp;
&quot;?subject=&quot; &amp; &quot;【Case#&quot;&amp;CaseNumber&amp;&quot;】&quot;
&amp;
&quot;&amp;cc=&quot; &amp; $User.My_mail_to_Salesforce__c
&amp;
&quot;&amp;body=&quot;&amp;SMAX_PS_SoldTo__r.Name&amp;&quot;%0D%0A&quot;
&amp;
SMAX_PS_SoldTo_Contact__r.Department &amp;&quot; %0D%0A&quot;
&amp;
SMAX_PS_SoldTo_Contact__r.LastName &amp;&quot;様%0D%0A&quot;
&amp;
&quot;いつもお世話になっております。%0D%0A&quot;
&amp;
&quot;株式会社堀場テクノサービスの&quot;&amp; $User.LastName &amp;&quot;です。%0D%0A&quot;
&amp;
&quot;サービス報告書と価格計算書をお送りいたします。%0D%0A&quot;
&amp;
&quot;よろしくお願い申し上げます。%0D%0A&quot;
&amp;
&quot;※お問い合わせの際は以下の番号をお伝えください。%0D%0A&quot;
&amp;
&quot;Case No.&quot;&amp;CaseNumber &amp;&quot;%0D%0A&quot;
&amp;
&quot;※CCに社内システム連携のためのアドレスが含まれておりますので、ご返信の際は「全員に返信」くださいますようお願いいたします。%0D%0A&quot;
&amp;
&quot;ref:&quot;&amp; Id
,&quot;販社/代理店宛&quot;)</formula>
        <label>販社/代理店宛</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Mail_to_EndUser__c</fullName>
        <description>エンドユーザ宛へのメールを作成する。</description>
        <formula>HYPERLINK(
&quot;mailto:&quot;&amp; Contact.Email
&amp;
&quot;?subject=&quot; &amp; &quot;【Case#&quot;&amp;CaseNumber&amp;&quot;】&quot;
&amp;
&quot;&amp;cc=&quot; &amp; $User.My_mail_to_Salesforce__c
&amp;
&quot;&amp;body=&quot;&amp;Account.Name&amp;&quot;%0D%0A&quot;
&amp;
Contact.Department &amp;&quot; %0D%0A&quot;
&amp;
Contact.LastName &amp;&quot; 様%0D%0A&quot;
&amp;
&quot;いつもお世話になっております。%0D%0A&quot;
&amp;
&quot;株式会社堀場テクノサービスの&quot;&amp; $User.LastName &amp;&quot;です。%0D%0A&quot;
&amp;
&quot;※お問い合わせの際は以下の番号をお伝えください。%0D%0A&quot;
&amp;
&quot;Case No.&quot;&amp;CaseNumber &amp;&quot;%0D%0A&quot;
&amp;
&quot;※CCに社内システム連携のためのアドレスが含まれておりますので、ご返信の際は「全員に返信」くださいますようお願いいたします。%0D%0A&quot;
&amp;
&quot;ref:&quot;&amp; Id
,&quot;エンドユーザ宛&quot;)</formula>
        <label>エンドユーザ宛</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Mail_to_HORIBAGr__c</fullName>
        <description>HORIBA Gr.宛へのメールを作成する。</description>
        <formula>HYPERLINK(
&quot;mailto:&quot;&amp; &quot;&quot;
&amp;
&quot;?subject=&quot; &amp; &quot;【Case#&quot;&amp;CaseNumber&amp;&quot;】&quot;
&amp;
&quot;&amp;cc=&quot; &amp; $User.My_mail_to_Salesforce__c
&amp;
&quot;&amp;body=お世話になっております。%0D%0A&quot;
&amp;
&quot;HTSの&quot;&amp; $User.LastName &amp;&quot;です。%0D%0A&quot;
&amp;
&quot;サービス報告書と価格計算書をお送りします。%0D%0A&quot;
&amp;
&quot;よろしくお願いいたします。%0D%0A&quot;
&amp;
&quot;※お問い合わせの際は以下の番号をお伝えください。%0D%0A&quot;
&amp;
&quot;Case No.&quot;&amp;CaseNumber &amp;&quot;%0D%0A&quot;
&amp;
&quot;※CCに社内システム連携のためのアドレスが含まれておりますので、ご返信の際は「全員に返信」くださいますようお願いいたします。%0D%0A&quot;
&amp;
&quot;ref:&quot;&amp; Id
,&quot;HORIBA Gr.宛&quot;)</formula>
        <label>HORIBA Gr.宛</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Naisen__c</fullName>
        <label>内線</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_OrderDate__c</fullName>
        <label>受注予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Payment_Terms__c</fullName>
        <formula>SMAX_PS_SoldTo__r.SMAX_PS_Payment_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>﻿HTS支払条件</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Rank__c</fullName>
        <label>確度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A（確度90%以上）</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B（確度80%以上）</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C（確度60%以上）</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D（確度50%以上）</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>E（確度40%以上）</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>F（確度20%以上）</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesGroup__c</fullName>
        <label>営業Gr.</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_SAP_SalesOffice__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOffice__c</fullName>
        <label>営業所</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOrg__c</fullName>
        <label>販売組織</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOrg</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Segment__c</fullName>
        <label>セグメント</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldTo_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受注先担当者 - (販社)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.SMAX_PS_SoldTo__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受注先 - (販社)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StartDateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>開始日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TargetProductCategory__c</fullName>
        <label>対象製品カテゴリ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>小型血球(3DIFF)</fullName>
                </value>
                <value>
                    <fullName>中型・大型血球(5DIFF)</fullName>
                </value>
                <value>
                    <fullName>血糖</fullName>
                </value>
                <value>
                    <fullName>Other POC</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_TargetProductDetailsCategory__c</fullName>
        <label>対象製品詳細カテゴリ</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_TargetProductCategory__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>測定値異常</fullName>
                </value>
                <value>
                    <fullName>PC異常</fullName>
                </value>
                <value>
                    <fullName>周辺機器異常</fullName>
                </value>
                <value>
                    <fullName>駆動系異常</fullName>
                </value>
                <value>
                    <fullName>流路系異常</fullName>
                </value>
                <value>
                    <fullName>電気系異常</fullName>
                </value>
                <value>
                    <fullName>外観異常</fullName>
                </value>
                <value>
                    <fullName>試薬異常</fullName>
                </value>
                <value>
                    <fullName>ソフトウェア異常</fullName>
                </value>
                <value>
                    <fullName>マスタデータ異常</fullName>
                </value>
                <value>
                    <fullName>データベース異常</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_VisitRequestDate__c</fullName>
        <label>訪問希望日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkDate__c</fullName>
        <label>作業（売上）予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Initial_Response__c</fullName>
        <description>Date/time on which customer was initial responsed as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was initial responsed as per commitment in SLA.</inlineHelpText>
        <label>Actual Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Onsite_Response__c</fullName>
        <description>Date/time on which customer was onsite responsed as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was onsite responsed as per commitment in SLA.</inlineHelpText>
        <label>Actual Onsite Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Resolution__c</fullName>
        <description>Date/time on which customer was resolved as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was resolved as per commitment in SLA.</inlineHelpText>
        <label>Actual Resolution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Restoration__c</fullName>
        <description>Date/time on which customer was restored as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was restored as per commitment in SLA.</inlineHelpText>
        <label>Actual Restoration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Auto_Entitlement_Status__c</fullName>
        <label>Auto Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Date__c</fullName>
        <description>Booking Window Date</description>
        <label>BW Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Selected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BW Selected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_BW_Selected_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Selected_On__c</fullName>
        <label>BW Selected On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Slots_Before__c</fullName>
        <label>BW Slots Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BW Territory</label>
        <referenceTo>SVMXC__Territory__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__BW_Time_Zone__c</fullName>
        <label>BW Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Type__c</fullName>
        <description>Select Billing Type</description>
        <inlineHelpText>Select Billing Type</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Courtesy</fullName>
                </value>
                <value>
                    <fullName>Empowerment</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Booking_Window__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Window</label>
        <referenceTo>SVMXC__Booking_Window__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Clock_Paused_Forever__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clock Paused Forever</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_City__c</fullName>
        <description>“City” part of the physical location address of Component SN</description>
        <formula>SVMXC__Component__r.SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“City” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_Country__c</fullName>
        <description>“Country” part of the physical location address of Component SN</description>
        <formula>TEXT(SVMXC__Component__r.SVMXC__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Country” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_State__c</fullName>
        <description>“State/Province” part of the physical location address of Component SN</description>
        <formula>SVMXC__Component__r.SVMXC__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“State/Province” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_Street__c</fullName>
        <description>“Street” part of the physical location address of Component SN</description>
        <formula>SVMXC__Component__r.SVMXC__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Street” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component_Zip__c</fullName>
        <description>“Zip/Postal Code” part of the physical location address of Component SN</description>
        <formula>SVMXC__Component__r.SVMXC__Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Zip/Postal Code” part of the physical location address of Component SN</inlineHelpText>
        <label>Component SN Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
        <label>Component SN</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Notes__c</fullName>
        <description>Additional information entered in Case during customer entitlement</description>
        <inlineHelpText>Additional information entered in Case during customer entitlement</inlineHelpText>
        <label>Entitlement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>